Aws/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-gateway-ingress
  namespace: production
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: ecommerce-gateway
      port: 
        number: 4000
  tls:
    - hosts:
      - ecommerceapp.com
      secretName: gateway-ingress-tls
  rules:
  - host: ecommerceapp.com
    http:
      paths:
      - path: /api/gateway/v1
        pathType: Prefix
        backend:
          service:
            name: ecommerce-gateway
            port: 
              number: 4000
